375/ Added Perk essence which will give specific perk.
376/ Added condition for most recipe if player are in roguelike world.
377/ Nerf item maximum stack amount for specific type of item.
378/ Deleted special mechanic that is exclusive to boss.
379/ Deleted Elite boss because it is not being used.
380/ Changed some enchantments effect.
381/ Experiment with custom skeletron archer ai.
382/ Small fix toward first strike check not compatible with perk.
383/ Some minor polishing on weapon rework.
384/ Removed Element, Mutation system.
385/ Replaced Skill "All or Nothing" with "Dice Roll"
386/ Deleted Soul Bind system, Guardian Angel and Outer God : The Nihilism are merged and converted into artifact.
387/ Deleted Gambler's Soul due to unable to balance the artifact to be fun to play.
388/ Deleted Small Lootbox artifact, Stella Card Deck because it doesn't fit the design of the mod.
389/ Slight buff all to synergy weapon and some change to certain synergy weapon which are these following:
- Amber Bone Spear: Every 3rd attack will shoot out arch of 3 amber bolt
- Bloody Stella: Blood Star circle are instead move behind a synergy bonus of enchanted sword
- Starlight Distributer: Area dependance effects are removed and instead it is a count shot effect.
- Natural Selection: The ghost bow now handler its own arrow shooting and shot 3 arrow in rapid succession instead of 1.
390/ Changed perk Stroke of Luck to Lucky Strike and Uncertain strike effect
391/ Setting up tool for glow draw and setting up for custom dust.
392/ Fixed a stupid bugs that make specific melee weapon hit every enemy.
393/ Added Akai Hanbun No Hasami
394/ Added sprite for Arena Blessing and Celestial Rage, also slightly reworked the Perk UI system rendering.
395/ Optimize world generation task "Create_Biome" and other such task.
396/ Deleted Test Teleporter debug item, Artifact debug item.
397/ Added a pos marker for trial, structure and such.
398/ Added alt click attack for Annihiliation.